# process_words

./: .gitignore  README.md  known.txt  pyproject.toml
process_words/: process.py
