[tool.poetry]
name = "process-words"
version = "0.1.0"
description = ""
authors = ["riccione <riccione@protonmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.10.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
